# Grupo-6---Dominios-de-Software

./: .gitignore  README.md
backend/src/: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
backend/src/app/api/: __main__.py  main.py
backend/src/app/api/routers/: doctors.py  emd_doctors.py  hospitals.py  medical_bed_types.py  medical_beds.py  medical_specialties.py  patient_transferences.py  (+3 more)
backend/src/app/db/: database.py
backend/src/app/models/: address.py  doctor.py  doctor_hospital_link.py  doctor_medical_specialty_link.py  emd_doctor.py  hospital.py  medical_bed.py  medical_bed_type.py  medical_specialty.py  patient.py  patient_clinical_condition.py  patient_transference.py  transference_request.py  update_of_patient_clinical_condition.py
backend/src/app/repository/: doctor_repository.py  emd_doctor_repository.py  hospital_repository.py  medical_bed_repository.py  medical_bed_type_repository.py  medical_specialty_repository.py  patient_clinical_condition_repository.py  patient_repository.py  patient_transference_repository.py  transference_request_repository.py
backend/src/migrations/: README  env.py  script.py.mako
backend/src/migrations/versions/: 04b6202dca0c_torna_campo_name_de_medicalbedtype_nao_.py  0a5f183a886e_adiciona_campos_em_patient.py  0b2d4deaacfc_remove_campo_de_transference_request.py  1e1f790d335c_adiciona_campos_em_hospital.py  2023_01_02_2234-a5aa1e90763e_setup_project.py  304be4bff981_make_some_patient_transference_.py  352db8ece730_torna_campo_em_hospital_nullable.py  46d87b732395_adiciona_restricao_de_unicidade_em_.py  7c60add3834a_adiciona_campos_em_doctor.py  8286dcd48906_make_name_field_of_medicalspecialty_.py  89ce8502827a_torna_id_de_medicalbedtype_nao_.py  a17f14265837_initial_schema.py  a8327ad6dc84_adiciona_campos_em_patient.py  cf238366b9d7_add_many_to_many_relationship_between_.py  d590c057c9de_add_transferencerequest_and_its_.py  ddf419708298_torna_cpf_e_rg_not_nullable_em_doctor.py  e4d92d9da534_adiciona_e_remove_campos_de_medicalbed.py  f205ee33275b_adiciona_patient_clinical_condition.py  f5da43b23880_adiciona_campo_em_medicalbedtype.py
(+130 files in other folders)
